# netgraph

./: README.md
netgraph.core/: netgraph.core.sln
netgraph.core/netgraph.core.library/: .gitignore  Factory.cs  FoundIsomorphisms.cs  Graph.cs  INativeNetgraph.cs  INetgraph.cs  NatGraph.cs  NativeProviders.Generated.cs  NativeProvidersTemplate.tt  Netgraph.cs  NetgraphLinux64.cs  Netgraphinux64.cs  Utils.cs  netgraph.core.library.csproj
netgraph.core/netgraph.core.tests/: .gitignore  MiscTests.cs  NetgraphTests.cs  UtilsTests.cs  netgraph.core.tests.csproj
netgraph.native/: CMakeLists.txt  netgraph.c  netgraph.h
netgraph.native/src/: CMakeLists.txt  misc.c  netgraph.c  netgraph.h
netgraph.native/tests/: CMakeLists.txt  misc_tests.c  netgraph_tests.c
